--- a/AutoReyes/AutoReyes.csproj
+++ b/AutoReyes/AutoReyes.csproj
@@ -125,7 +125,10 @@
     <Content Include="img\NyrAjuZS.png" />
     <Content Include="js\jquery-3.1.0.min.js" />
     <Content Include="js\jquery.quicksearch.js" />
-    <Content Include="RegistroUsuarios.aspx" />
+    <Content Include="Registros\RegistroColores.aspx" />
+    <Content Include="Registros\RegistroMarcas.aspx" />
+    <Content Include="Registros\RegistroModelos.aspx" />
+    <Content Include="Registros\RegistroUsuarios.aspx" />
     <Content Include="scripts\ai.0.22.19-build00125.js" />
     <Content Include="scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Web.config" />
@@ -146,11 +149,32 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistroUsuarios.aspx.cs">
+    <Compile Include="Registros\RegistroColores.aspx.cs">
+      <DependentUpon>RegistroColores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\RegistroColores.aspx.designer.cs">
+      <DependentUpon>RegistroColores.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Registros\RegistroMarcas.aspx.cs">
+      <DependentUpon>RegistroMarcas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\RegistroMarcas.aspx.designer.cs">
+      <DependentUpon>RegistroMarcas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Registros\RegistroModelos.aspx.cs">
+      <DependentUpon>RegistroModelos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\RegistroModelos.aspx.designer.cs">
+      <DependentUpon>RegistroModelos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Registros\RegistroUsuarios.aspx.cs">
       <DependentUpon>RegistroUsuarios.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="RegistroUsuarios.aspx.designer.cs">
+    <Compile Include="Registros\RegistroUsuarios.aspx.designer.cs">
       <DependentUpon>RegistroUsuarios.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site1.Master.cs">
