--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,7 +42,7 @@
     <Compile Include="ClaseMaestra.cs" />
     <Compile Include="Colores.cs" />
     <Compile Include="Estados.cs" />
-    <Compile Include="Mensajes.cs" />
+    <Compile Include="Marcas.cs" />
     <Compile Include="Modelos.cs" />
     <Compile Include="Motores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
