trabajando en todos los Registros, creando RegitroPaquetes, Creando Registro Motores, Transmisiones, Paquetes

--- a/AutoReyes/Web.config
+++ b/AutoReyes/Web.config
@@ -52,7 +52,6 @@
 
   </runtime>
   <connectionStrings>
-    <add name="ConStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True;Connect Timeout=30"
-        providerName="System.Data.SqlClient" />
+    <add name="ConStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
