--- a/AutoReyes/AutoReyes.csproj
+++ b/AutoReyes/AutoReyes.csproj
@@ -125,10 +125,13 @@
     <Content Include="img\NyrAjuZS.png" />
     <Content Include="js\jquery-3.1.0.min.js" />
     <Content Include="js\jquery.quicksearch.js" />
+    <Content Include="Registros\RegistroMotores.aspx" />
     <Content Include="Registros\RegistroColores.aspx" />
     <Content Include="Registros\RegistroMarcas.aspx" />
     <Content Include="Registros\RegistroModelos.aspx" />
+    <Content Include="Registros\RegistroTransminiones.aspx" />
     <Content Include="Registros\RegistroUsuarios.aspx" />
+    <Content Include="Registros\ReportePaquetes.aspx" />
     <Content Include="scripts\ai.0.22.19-build00125.js" />
     <Content Include="scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Web.config" />
@@ -149,6 +152,13 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registros\RegistroMotores.aspx.cs">
+      <DependentUpon>RegistroMotores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\RegistroMotores.aspx.designer.cs">
+      <DependentUpon>RegistroMotores.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Registros\RegistroColores.aspx.cs">
       <DependentUpon>RegistroColores.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -170,12 +180,26 @@
     <Compile Include="Registros\RegistroModelos.aspx.designer.cs">
       <DependentUpon>RegistroModelos.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Registros\RegistroTransminiones.aspx.cs">
+      <DependentUpon>RegistroTransminiones.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\RegistroTransminiones.aspx.designer.cs">
+      <DependentUpon>RegistroTransminiones.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Registros\RegistroUsuarios.aspx.cs">
       <DependentUpon>RegistroUsuarios.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Registros\RegistroUsuarios.aspx.designer.cs">
       <DependentUpon>RegistroUsuarios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Registros\ReportePaquetes.aspx.cs">
+      <DependentUpon>ReportePaquetes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\ReportePaquetes.aspx.designer.cs">
+      <DependentUpon>ReportePaquetes.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
@@ -205,7 +229,6 @@
       <Name>BLL</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
