--- a/AutoReyes/packages.config
+++ b/AutoReyes/packages.config
@@ -12,4 +12,5 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net40" />
+  <package id="Microsoft.Office365.ReportingWebServiceClient" version="1.0.3.0" targetFramework="net40" />
 </packages>
