--- a/AutoReyes/AutoReyes.csproj
+++ b/AutoReyes/AutoReyes.csproj
@@ -125,16 +125,18 @@
     <Content Include="img\NyrAjuZS.png" />
     <Content Include="js\jquery-3.1.0.min.js" />
     <Content Include="js\jquery.quicksearch.js" />
-    <Content Include="Registros\RegistoVehiculos.aspx" />
+    <Content Include="Registros\RegistroMarcas.aspx" />
+    <Content Include="Registros\RegistroVehiculos.aspx" />
     <Content Include="Registros\RegistroMotores.aspx" />
     <Content Include="Registros\RegistroColores.aspx" />
-    <Content Include="Registros\RegistroMarcas.aspx" />
     <Content Include="Registros\RegistroModelos.aspx" />
     <Content Include="Registros\RegistroTransminiones.aspx" />
     <Content Include="Registros\RegistroUsuarios.aspx" />
     <Content Include="Registros\RegistroPaquetes.aspx" />
     <Content Include="scripts\ai.0.22.19-build00125.js" />
     <Content Include="scripts\ai.0.22.19-build00125.min.js" />
+    <Content Include="toastr.min.css" />
+    <Content Include="toastr.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -153,12 +155,19 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registros\RegistoVehiculos.aspx.cs">
-      <DependentUpon>RegistoVehiculos.aspx</DependentUpon>
+    <Compile Include="Registros\RegistroMarcas.aspx.cs">
+      <DependentUpon>RegistroMarcas.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Registros\RegistoVehiculos.aspx.designer.cs">
-      <DependentUpon>RegistoVehiculos.aspx</DependentUpon>
+    <Compile Include="Registros\RegistroMarcas.aspx.designer.cs">
+      <DependentUpon>RegistroMarcas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Registros\RegistroVehiculos.aspx.cs">
+      <DependentUpon>RegistroVehiculos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\RegistroVehiculos.aspx.designer.cs">
+      <DependentUpon>RegistroVehiculos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Registros\RegistroMotores.aspx.cs">
       <DependentUpon>RegistroMotores.aspx</DependentUpon>
@@ -173,13 +182,6 @@
     </Compile>
     <Compile Include="Registros\RegistroColores.aspx.designer.cs">
       <DependentUpon>RegistroColores.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Registros\RegistroMarcas.aspx.cs">
-      <DependentUpon>RegistroMarcas.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Registros\RegistroMarcas.aspx.designer.cs">
-      <DependentUpon>RegistroMarcas.aspx</DependentUpon>
     </Compile>
     <Compile Include="Registros\RegistroModelos.aspx.cs">
       <DependentUpon>RegistroModelos.aspx</DependentUpon>
@@ -236,6 +238,9 @@
       <Project>{26eea90f-0ab4-4ae3-8f89-fb84e290c8f7}</Project>
       <Name>BLL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Fotos\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
